Fix align and titles sizes in badge list

--- a/Resources/public/css/slrn_badges.css
+++ b/Resources/public/css/slrn_badges.css
@@ -17,7 +17,7 @@
 }
 
 .badge_name{
-	font-size: 1.3em;
+	font-size: 1em;
 	margin: 10px 0;
 	margin: 10px 0;
 } 
